#2324 - pagination overflowing container on group page + browse page issue - proper fix

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
@@ -38,8 +38,6 @@ a:focus,
   background: #eeeeee;
   border-top: none;
   height: 45px;
-  margin-left: -45px;
-  margin-right: -45px;
   margin-bottom: 0;
 }
 .pagination ul,
@@ -67,6 +65,7 @@ a:focus,
   margin-left: -2px;
   display: inline-block;
   width: 45px;
+  padding: 0;
 }
 .pagination li.active a,
 .module .pagination li.active a {
