--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/base/pagination.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/base/pagination.less
@@ -5,8 +5,6 @@
   background: @extraLightGrayColor;
   border-top: none;
   height: @paginationItemSize;
-  margin-left: -@containerMarginSize;
-  margin-right: -@containerMarginSize;
   margin-bottom: 0;
 
   ul {
@@ -26,6 +24,7 @@
       margin-left: -2px;
       display: inline-block;
       width: 45px;
+      padding: 0;
     }
 
     &.active a {
